# spatiallm

./: MANIFEST.in  pyproject.toml  tasks.py
examples/: overpass.ipynb
examples/pizza/: food-wine-pizza.txt
spatiallm/: geoparse.py  hello.py  overpass_qry.py  schema.py
tests/: test_openai_api.py
